[workspace]
members = [
  "common",
  "gateway",
  "maroon",
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
libp2p = { version = "0.55.0", default-features = false, features = [
    "tcp",
    "tokio",
    "noise",
    "yamux",
    "gossipsub",
    "ping",
    "macros",
    "plaintext",
    "serde",
    "gossipsub",
] }
libp2p-request-response = { version = "0.28.0", features = ["json"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3"