[package]
name = "maroon"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
libp2p = { workspace = true }
libp2p-request-response = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

env_logger = "0.11.6"
etcd-client = "0.14.1"
log = "0.4.26"
rand = "0.9.1"
chrono = "0.4.41"